unpackaged/main/default/objects/pse__ColumnPreferences__c/pse__ColumnPreferences__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Column Preferences</label>
</CustomObject>