unpackaged/main/default/objects/pse__ColumnPreferences__c/fields/pse__Field__c.field-meta.xml
<CustomField>
    <fullName>pse__Field__c</fullName>
    <inlineHelpText>Contains one or more API names for the fields, including cross-object fields, this column is based on. System generated field; do not edit manually.</inlineHelpText>
    <label>Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>