unpackaged/main/default/objects/pse__ColumnPreferences__c/fields/pse__Order__c.field-meta.xml
<CustomField>
    <fullName>pse__Order__c</fullName>
    <inlineHelpText>This setting defines the preferred order of this column. You can enter non-contiguous values.</inlineHelpText>
    <label>Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>