unpackaged/main/default/objects/pse__ColumnPreferences__c/fields/pse__Value__c.field-meta.xml
<CustomField>
    <fullName>pse__Value__c</fullName>
    <description>Save the value of respective field</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>