unpackaged/main/default/objects/pse__ColumnPreferences__c/fields/pse__Width__c.field-meta.xml
<CustomField>
    <fullName>pse__Width__c</fullName>
    <inlineHelpText>This setting defines the width of this column, in pixels.</inlineHelpText>
    <label>Width</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>